# logswan

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  CNAME  ChangeLog  LICENSE  Makefile  README.md  THANKS  TODO  index.html  logswan.1  logswan.c  logswan.spec  params.json
compat/: compat.h  pledge.c  pledge.h  strtonum.h
examples/: logswan.json
man/: logswan.1
src/: config.c  config.h  continents.c  continents.h  countries.c  countries.h  definitions.c  definitions.h  logswan.c  logswan.h  output.c  output.h  parse.c  parse.h  results.h  seccomp.h
tests/: logswan.mmdb  logswan.pl
